--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>Angular application from docker</h1>
-<p>{{message}}</p>
+<p style="color: red;">{{message}}</p>
 <router-outlet></router-outlet>
